Grace/tests/gibbs/errors/t179.grace
// ERROR = P1004
var block := { print "Hello world" }
catch block)
case {
    e : Error -> print "OK; Caught an error."
}
